Correct 其它 to 其他.

--- a/faq/zh_CN.po
+++ b/faq/zh_CN.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: UDC 10.04\n"
-"POT-Creation-Date: 2010-07-21 21:51+0800\n"
+"POT-Creation-Date: 2010-07-24 19:27+0800\n"
 "PO-Revision-Date: 2010-06-13 21:07+0800\n"
 "Last-Translator: syq <wzssyqa@gmail.com>\n"
 "Language-Team: Chinese (simplified)\n"
@@ -353,7 +353,7 @@ msgstr ""
 
 #: faq/xinclude.xml:187(para)
 msgid ""
-"在很多其它 Linux 发行版上，root 用户是默认启用的，而 Ubuntu 不是这样的。在 "
+"在很多其他 Linux 发行版上，root 用户是默认启用的，而 Ubuntu 不是这样的。在 "
 "Ubuntu 中 root 用户默认是被禁用的。"
 msgstr ""
 
@@ -540,7 +540,7 @@ msgid ""
 msgstr ""
 
 #: faq/xinclude.xml:273(para)
-msgid "源里还有其它几个 nautilus 插件，可以在新立德里搜索 nautilus。"
+msgid "源里还有其他几个 nautilus 插件，可以在新立德里搜索 nautilus。"
 msgstr ""
 
 #: faq/xinclude.xml:274(para)
@@ -550,7 +550,7 @@ msgid ""
 msgstr ""
 
 #: faq/xinclude.xml:278(title)
-msgid "Gedit 打开一些文本文件时会乱码，其它文本编辑器却正常，这是怎么回事？"
+msgid "Gedit 打开一些文本文件时会乱码，其他文本编辑器却正常，这是怎么回事？"
 msgstr ""
 
 #: faq/xinclude.xml:279(para)
@@ -771,7 +771,7 @@ msgstr ""
 #: faq/xinclude.xml:434(para)
 msgid ""
 "如果仍然不能安装好驱动，您可能需要使用搜索引擎等去自己寻找驱动程序。如果能够"
-"确定新版内核可以支持您的硬件， 或者可以从其它地方下载得到驱动程序，那么您可能"
+"确定新版内核可以支持您的硬件， 或者可以从其他地方下载得到驱动程序，那么您可能"
 "需要重新编译内核了。"
 msgstr ""
 
@@ -847,7 +847,7 @@ msgid "系统的安装和引导"
 msgstr ""
 
 #: faq/xinclude.xml:484(title)
-msgid "我重新安装了 Windows，可是启动时缺找不到 Ubuntu 的启动项了？"
+msgid "我重新安装了 Windows，可是启动时却找不到 Ubuntu 的启动项了？"
 msgstr ""
 
 #: faq/xinclude.xml:485(para)
@@ -975,7 +975,7 @@ msgstr ""
 #: faq/xinclude.xml:590(para)
 msgid ""
 "Ctrl-Shift-C 复制；Ctrl-Shift-V 粘贴。这是因为 Ctrl-C 和 Ctrl-V 在终端中有其"
-"它用处。"
+"他用处。"
 msgstr ""
 
 #: faq/xinclude.xml:593(para)
@@ -1160,7 +1160,7 @@ msgstr ""
 
 #: faq/xinclude.xml:718(para)
 msgid ""
-"Debian Stable 版总是相对保守，而其它分支却没有较好支持，同时管理上也过于民"
+"Debian Stable 版总是相对保守，而其他分支却没有较好支持，同时管理上也过于民"
 "主，造成决策缓慢。这样 Debian 开发者之一的 马克·舍特尔沃斯 决定创建 Ubuntu 项"
 "目。"
 msgstr ""
@@ -1214,7 +1214,7 @@ msgid ""
 msgstr ""
 
 #: faq/xinclude.xml:735(title)
-msgid "Ubuntu 与其它基于 Ubuntu 的衍生发行版"
+msgid "Ubuntu 与其他基于 Ubuntu 的衍生发行版"
 msgstr ""
 
 #: faq/xinclude.xml:736(para)
